configs: am65x_evm_a53_defconfig: Enable CONFIG_REMOTEPROC_TI_PRU
Enable CONFIG_REMOTEPROC_TI_PRU and related configs.
With that enable ICSSG_PRUETH config.

Signed-off-by: Keerthy <j-keerthy@ti.com>

--- a/configs/am65x_evm_a53_defconfig
+++ b/configs/am65x_evm_a53_defconfig
@@ -49,6 +49,8 @@ CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_DM=y
 CONFIG_SPL_DM=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
+CONFIG_REGMAP=y
+CONFIG_SYSCON=y
 CONFIG_SPL_REGMAP=y
 CONFIG_CLK=y
 CONFIG_SPL_CLK=y
@@ -75,6 +77,7 @@ CONFIG_TI_AM65_CPSW_NUSS=y
 CONFIG_PCI=y
 CONFIG_DM_PCI=y
 CONFIG_PCI_KEYSTONE=y
+CONFIG_TI_AM64_ICSSG_PRUETH=y
 CONFIG_PHY=y
 CONFIG_AM654_PHY=y
 CONFIG_PINCTRL=y
@@ -85,10 +88,12 @@ CONFIG_PINCTRL_SINGLE=y
 CONFIG_POWER_DOMAIN=y
 CONFIG_TI_SCI_POWER_DOMAIN=y
 CONFIG_REMOTEPROC_TI_K3_R5F=y
+CONFIG_REMOTEPROC_TI_PRU=y
 CONFIG_DM_RESET=y
 CONFIG_RESET_TI_SCI=y
 CONFIG_DM_SERIAL=y
 CONFIG_SOC_TI=y
+CONFIG_TI_PRUSS=y
 CONFIG_SYSRESET=y
 CONFIG_SPL_SYSRESET=y
 CONFIG_SYSRESET_TI_SCI=y
